src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 20vmin;
  pointer-events: none;
  border-radius: 50%;
  border-color: white;
  border-style: solid;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 10s linear;
  }
}

  .App-icon {
    height: 400px;
  }
.App-header {
  background-color: #266ec0;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

h1 {
  color: black;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-style: italic;
  font-weight: bold;
  font-size: 30px;
}
p {
  color: black;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 20px;
}

.grid {
  display: grid;
  grid-template-columns: auto auto auto;
  grid-template-rows: auto;
  column-gap: 10px;
  align-content: center;
  
}

.column {
  background-color: white;
  padding: 10px 10px;
  column-width: auto;
}

.Jumbo {
  align-content: center;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

